exports[`test renders appropriately (when syncing) 1`] = `
<div
  className="repo-tools-refresh">
  <button
    className="repo-tools-refresh-button"
    disabled="disabled"
    onClick={[Function]}>
    <span>
      <i
        className="fa fa-refresh fa-fw fa-spin" />
    </span>
  </button>
</div>
`;

exports[`test renders appropriately 1`] = `
<div
  className="repo-tools-refresh">
  <button
    className="repo-tools-refresh-button"
    disabled={null}
    onClick={[Function]}>
    <span>
      <i
        className="fa fa-refresh fa-fwundefined" />
    </span>
  </button>
</div>
`;
